--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 .myBadge{
     width: 380px;
     min-width: 380px;
-    height: 220px;
+    height: 290px;
     border: 0px;
+}
+
+.myBadge .badgrBadge{
+    width: 100%;
+    height: 220px;
 }
 
 .testBadge{
