--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     border: 0px;
 }
 
+.myBadge .badgeImg{
+    width: 120px;
+    height: 120px;
+    float: left;
+}
+
 .myBadge .badgrBadge{
     width: 100%;
     height: 220px;
